# patchwerk

./: .gitignore  AGENTS.md  AGENTS.md.example  README.md  agent-config.md  pyproject.toml  stitch.sh
.agent-skills/brainstorming/: SKILL.md
.agent-skills/commit-messages/: SKILL.md
.agent-skills/debugging-framework/: skill.md
.agent-skills/devrun/: SKILL.md
.agent-skills/dignified-python/: dignified-python-core.md
.agent-skills/dignified-python/references/: checklists.md
.agent-skills/framework/: core.md
.agent-skills/swarm/: SKILL.md
.agent-skills/terraform/: SKILL.md
.agent-skills/uv-docker/: SKILL.md
.agent-skills/uv-management/: SKILL.md
.claude/: CLAUDE.md  README.md
.claude/agents/: devrun.md  haiku-devrun.md
.claude/commands/: next.md  ocode.md  plan-tdd.md  session-summary.md  setup-swarm.md  status.md  teardown-swarm.md
.claude/skills/cleanup/: SKILL.md
.claude/skills/discovery/: SKILL.md
.claude/skills/observability/: SKILL.md
.claude/skills/terraform/: SKILL.md
.gemini/: agents
.gemini/agents/: devrun.md
.gemini/skills/commit-messages/: SKILL.md
.gemini/skills/dignified-python/references/: api-design.md  exception-handling.md
.gemini/skills/fake-driven-testing/references/: quick-reference.md
.gemini/skills/terraform/references/: terraform-practices.md
.gemini/skills/uv-management/: SKILL.md
orchestration/: fix-junctions.sh  identity.sh  merge-back.sh  setup.sh  teardown.sh
src/patchwerk/: cli.py
src/patchwerk/templates/: AGENTS.md
src/patchwerk/templates/.claude/: settings.json
(+12 files in other folders)
