[project]
name = "patchwerk"
version = "0.1.0"
description = "Distribute agent configuration files across repos"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
patchwerk = "patchwerk.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/patchwerk"]
